--- a/sparkbackend/pom.xml
+++ b/sparkbackend/pom.xml
@@ -20,5 +20,10 @@
         	<artifactId>google-places-api-java</artifactId>
         	<version>2.1.2</version>
     	</dependency>
+    	<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>javax.ws.rs-api</artifactId>
+			<version>2.0</version>
+		</dependency>		
     </dependencies>
 </project>
