--- a/sparkbackend/configuration/props.config
+++ b/sparkbackend/configuration/props.config
@@ -1,1 +1,4 @@
-datasetPath=/home/jagruti/workspace/Vacation-Recommendation-System/dataset/ml-1m/ratings.dat
+ratings_file=/home/jagruti/workspace/dataset-239/dataset/ml-1m/ratings.dat
+db_url=jdbc:mysql://localhost:3306/cmpe239
+db_username=root
+db_password=linux2015
